# urban-mobility-data-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  PROJECT_REQUIREMENTS_NO_SUPABASE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  (+1 more)
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
dbt/: dbt_project.yml  profiles.yml  profiles.yml.example
dbt/models/: schema.yml  sources.yml
dbt/models/dimensions/: dim_date.sql  dim_hour.sql  dim_payment_type.sql  dim_rate_code.sql  dim_zone.sql
dbt/models/facts/: fct_trips.sql
dbt/models/marts/: mart_anomalous_trips.sql  mart_daily_trip_metrics.sql  mart_hourly_demand.sql  mart_revenue_metrics.sql  mart_route_metrics.sql  mart_zone_demand.sql
dbt/models/staging/: stg_taxi_zones.sql  stg_yellow_trips.sql
docs/: api.md  architecture.md  backlog.md  dagster.md  dashboard.md  data_model.md  data_source.md  final_verification.md  local_demo.md  operations.md  portfolio_review.md  publish_checklist.md  repo_recap.md  troubleshooting.md
pipelines/dagster_project/: pyproject.toml
scripts/: check_repo_guardrails.py  check_repo_readiness.py  clean_generated.py  create_demo_fixture.py  run_demo.py
src/urban_mobility/: __init__.py  __main__.py  anomalies.py  config.py  download.py  ingest.py  load_duckdb.py  manifest.py  metrics.py  quality.py  utils.py  validate.py
tests/integration/: test_api.py  test_dagster_orchestration.py  test_dbt_pipeline.py  test_validation_duckdb.py
tests/unit/: test_bootstrap.py  test_demo_fixture.py  test_download.py  test_ingest.py  test_quality.py  test_quality_report_repository.py  test_repo_readiness.py  test_run_demo.py
(+37 files in other folders)
