[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-mobility-data-platform"
version = "0.1.0"
description = "Local-first urban mobility data engineering platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit>=4.2,<5",
  "pytest>=8.4,<9",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".planning",
  "data",
  "reports",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
