[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-mobility-data-platform"
version = "0.1.0"
description = "Local-first urban mobility data engineering platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "duckdb>=1.4,<2",
  "fastapi>=0.128,<0.129",
  "httpx>=0.28,<1",
  "pydantic>=2.12,<3",
  "pyarrow>=19,<23",
  "uvicorn[standard]>=0.38,<1",
]

[dependency-groups]
dev = [
  "dagster>=1.12,<2",
  "dagster-webserver>=1.12,<2",
  "dbt-duckdb>=1.9,<2",
  "pre-commit>=4.2,<5",
  "pytest>=8.4,<9",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["src", "pipelines/dagster_project"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".planning",
  ".dagster",
  "data",
  "dbt/target",
  "pipelines/dagster_project/.dagster",
  "reports",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
